@@ -13,8 +13,9 @@ Item								   Prio Status
 ------------------------------------------------------------------------------
 
 * Bugs
-  + 41612: No titles for axes					      1	KDCH
-       Fixed by new KDChart version
+  + 41612: No titles for axes					      1	----
+     - Fixed by new KDChart version					kdch
+     - Enable and activate settings in the config dialog.		--
   + 55606: [modified] tag doesn't work correctly.		      2 ----
   + 90893: never-saved doc failes autosave			      2 ----
   + 77839: Program hangs when only one value for pie chart 	      1	KDCH
@@ -25,6 +26,7 @@ Item								   Prio Status
   + 101007: Error in reading back axis labels.			      1 DONE
       - Store row and column labels separately in the document		done
       - Load old type files without separately stored labels.		done
+      - Fix labelText bug in save/load in KDChart			kdch
       ----------------------------------------------------------------
       I don't think the following is needed once we have a new 
       version of KDChart.
@@ -32,7 +34,6 @@ Item								   Prio Status
       - Load row and column labels	 				--
   + 101290: KChrt changes font for axes when Polar chart is chosen    1	KDCH
        Fixed by new KDChart version
-
 
 * Wishes
   + 14971: Data in rows or columns				      1	DONE
@@ -56,13 +57,14 @@ Item								   Prio Status
   + Singular or plural for tooltips, not both.			     S1 DONE
 
   + Fix ChangeLog re: bug titles.					DONE
-  + Grep for FIXME and fix the urgent ones.			      2 ----
-    - kchart_part.h:106:    //FIXME: To be deprecated:		      2 --
-    - kchartDataEditor.cc:275  // FIXME: Remove			      2 --
-    - kchartDataEditor.cc:304  // FIXME: Remove			      2 --
-    - kchartDataEditor.cc:316  // FIXME: Remove			      2 --
-    - kchartDataEditor.cc:345  // FIXME: Remove			      2 --
-    - kchart_view.cc:595:	// FIXME: Losing precision here.      2 --
+  + Grep for FIXME and fix the urgent ones.			      2 DONE
+    - kchart_part.h:106:    //FIXME: To be deprecated:		      2 done
+    - kchartDataEditor.cc:275  // FIXME: Remove			      2 done
+    - kchartDataEditor.cc:304  // FIXME: Remove			      2 done
+    - kchartDataEditor.cc:316  // FIXME: Remove			      2 done
+    - kchartDataEditor.cc:345  // FIXME: Remove			      2 done
+  + Remove include of kchartDataEditor. in a lot of .h files          2 ----
+  + What is kchartBarConfigDialog.{h,cc}? Remove it if possible.      1 ----
 
 * Toolbars
   + Separate toolbar for chart types (separate from config, etc).     2 ----
@@ -81,6 +83,7 @@ Item								   Prio Status
   + Make Apply button work.						DONE
   + Smaller column widths?						DONE
   + Transfer the Tooltips and WhatsThis from the old editor.	      1	DONE
+  + Remove the spinboxes from the buddy list.			      1 ----
 
 * Config dialog
   + Make Data page work.						DONE
